Spacing fixes

--- a/stylesheets/sass/home.scss
+++ b/stylesheets/sass/home.scss
@@ -571,13 +571,14 @@ header {
   background: $c-red;
   color: #fff;
   font-size: 1.5rem;
-  padding: 1rem 1rem 0;
+  padding: 1.2rem 1rem 0;
   width: 100%;
   border-radius: 4px;
   margin-bottom: 10px;
   border: 2px solid #fff;
   @media only screen and (min-width: $large-ish) {
     position: absolute;
+    padding: 1rem 1rem 0;
   }
 }
 
